--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ footer{
     font-weight: 400;
     margin: 0px 5px;
 }
-@media (max-widt: 700px){
+@media (max-width: 700px){
     .footerNav ul{
         flex-direction: column;
     }
