--- a/style.css
+++ b/style.css
@@ -3,6 +3,67 @@
     margin: 0;
     box-sizing: border-box;
 }
+header{
+    width: 100%;
+    height: 100vh;
+    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url(../images/mosa.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+nav{
+    width: 100%;
+    height: 15vh;
+    background: rgba(0,0,0,0.2);
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-transform: uppercase;
+
+}
+nav .logo{
+    width: 20%;
+    text-align: center;
+}
+nav .menu{
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+}
+nav .menu a{
+    width: 25%;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+main{
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+}
+section{
+
+
+}
+section h1{
+    font-size: 30px;
+    font-weight: 400;
+    color: white;
+    letter-spacing: 3px;
+    text-shadow: 3px 3px 2px black;
+}
+section h2{
+    font-size: 55px;
+    font-weight: 700;
+    color: white;
+    letter-spacing: 3px;
+    text-shadow: 3px 3px 2px black;
+    text-transform: uppercase;
+}
 footer{
     background-color: #111;
 }
