--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 }
-header{
+.h{
     width: 100%;
     height: 100vh;
-    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url(../images/mosa.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url(mosa.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -29,6 +30,7 @@ nav .menu{
     width: 40%;
     display: flex;
     justify-content: space-around;
+    min-width:360px;
 }
 nav .menu a{
     width: 25%;
@@ -139,5 +141,12 @@ footer{
         text-align: center;
         margin: 10px;
     }
+
 }
+/* @media screen and (min-width:830px){
+    .h{
+        background-size: cover;
+    }
+} */
+
 
