--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .h{
     width: 100%;
     height: 100vh;
-    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url(mosa.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)), url(https://images.freecreatives.com/wp-content/uploads/2016/04/Abstract-Website-Background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
